--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
 
   <body>
     <%= render '/shared/navbar' %>
+    <%= render '/shared/message' %>
 
   <div class="container">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    
     
     <%= yield %>
     </div>
