--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -3,7 +3,7 @@
 <h2 class="text-center">Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+   <%= render 'shared/devisemes' %>
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
@@ -19,7 +19,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm new password", class: "form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="actions">
     <%= f.submit "Change my password", class: "btn btn-primary" %>
   </div>
 <% end %>
