--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -6,7 +6,7 @@
    
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= render 'shared/devisemes' %>
 
   <div class="form-group">
    
@@ -15,8 +15,8 @@
   
   <br>
 
-  <div class="form-group">
-    <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-block"  %>
+  <div class="actions">
+    <%= f.submit "Send me reset password instructions", class: "btn btn-primary"  %>
   </div>
 <% end %>
 
